--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,12 +9,10 @@
     <string name="choose_connection">Choose Connection</string>
     <string name="player_turn">It is your turn!</string>
     <string name="bot_turn">It is the bots turn!</string>
-    <string name="select_gameMode">Select Game Mode:</string>
-    <string name="select_millMode">Select Mill Mode:</string>
-    <string name="select_difficulty1">Select Difficulty of Bot 1:</string>
-    <string name="select_difficulty2">Select Difficulty of Bot 2:</string>
+    <string name="select_millVariant">Mill Variant:</string>
+    <string name="select_player_black_difficulty">Difficulty of Player Black:</string>
+    <string name="select_player_white_difficulty">Difficulty of Player White:</string>
     <string name="select_whoStarts">Who Starts?</string>
-    <string name="select_color">Choose your Color:</string>
     <string name="button_not_ready">Select all Options first!</string>
 
 </resources>
