--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="ok">OK</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
     <string name="app_unusable">Application can not be used</string>
     <string name="choose_connection">Choose Connection</string>
     <string name="your_turn">It\'s your turn!</string>
@@ -16,6 +18,8 @@
     <string name="select_player_white">Select Player White:</string>
     <string name="select_whoStarts">Who Starts?</string>
     <string name="clicking_in_botvsbot">Both Players are Bots!</string>
+    <string name="remis_title">Remis</string>
+    <string name="remis_message">Remis! No Player could close a mill since %1$d moves. Do you want to continue?</string>
     <string name="black">Black</string>
     <string name="white">White</string>
 
