--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="clicking_in_botvsbot">Both Players are Bots!</string>
     <string name="remis_title">Remis</string>
     <string name="remis_message">Remis! No Player could close a mill since %1$d moves. Do you want to continue?</string>
+    <string name="start_new_game">Start New Game</string>
+    <string name="want_to_start_new_game">Do you want to start a new Game?</string>
     <string name="black">Black</string>
     <string name="white">White</string>
 
