--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -12,7 +12,7 @@
     <string name="select_player_white">Spieler Weiß:</string>
     <string name="select_whoStarts">Wer fängt an?</string>
     <string name="start_game">Spiel starten!</string>
-    <string name="start_new_game">Neues Spiel Starten</string>
+    <string name="start_new_game">Neues Spiel starten</string>
     <string name="want_to_start_new_game">Möchtest du ein neues Spiel starten?</string>
     <string name="white">Weiß</string>
     <string name="white_turn">Weiß ist am Zug!</string>
@@ -22,7 +22,7 @@
     <string name="nine_mens_morris">9er-Mühle</string>
     <string name="seven_mens_morris">7er-Mühle</string>
     <string name="want_to_quit">Möchtest du das Spiel wirklich beenden?</string>
-    <string name="quit_game">Spiel Beenden</string>
+    <string name="quit_game">Spiel beenden</string>
     <string name="options">Optionen</string>
     <string name="what_do">Was möchtest du tun?</string>
     <string name="cancel">Abbrechen</string>
@@ -32,4 +32,15 @@
     <string name="harder_bot">Bot (Schwerer)</string>
     <string name="hardest_bot">Bot (Am Schwersten)</string>
     <string name="human_player">Mensch</string>
+    <string name="you_have_won">Du hast gewonnen!</string>
+    <string name="has_won">hat gewonnen!</string>
+    <string name="no_moves">Der Gegner kann keinen Zug mehr machen!</string>
+    <string name="no_pieces">Der Gegner hat alle seine Steine verloren!</string>
+    <string name="show_gameboard">Spielfeld anzeigen</string>
+    <string name="pos_occupied">Die Position ist besetzt!</string>
+    <string name="nothing_to_move">Hier gibt es nichts zum Bewegen. Klicke auf einen von deinen Steinen!</string>
+    <string name="can_not_move">Hier kannst du nicht hin. Wähle eine andere Position!</string>
+    <string name="not_your_turn">Du bist noch nicht dran!</string>
+    <string name="nothing_to_kill">Hier ist nichts zum Schmeißen. Wähle einen Stein vom Gegner!</string>
+    <string name="cannot_kill_mill">Mühlen können nicht geschmissen werden.  Wähle ein anderes Ziel!</string>
 </resources>
