--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,16 @@
     <string name="harder_bot">Harder Bot</string>
     <string name="hardest_bot">Hardest Bot</string>
     <string name="human_player">Human Player</string>
+    <string name="you_have_won">You have won!</string>
+    <string name="has_won">has won!</string>
+    <string name="no_moves">The opponent can not make any further move!</string>
+    <string name="no_pieces">The opponent has lost all of his pieces!</string>
+    <string name="show_gameboard">Show Gameboard</string>
+    <string name="pos_occupied">This Position is occupied!</string>
+    <string name="nothing_to_move">Nothing to move here. Click on one of your pieces!</string>
+    <string name="can_not_move">You can not move to this Position. Choose another one!</string>
+    <string name="not_your_turn">It is not your turn!</string>
+    <string name="nothing_to_kill">Nothing to kill here. Choose a piece from your opponent!</string>
+    <string name="cannot_kill_mill">You can not kill a mill. Choose another target!</string>
 
 </resources>
