better handling of text when its too long

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -43,4 +43,5 @@
     <string name="HARD">Schwer</string>
     <string name="HARDER">Schwerer</string>
     <string name="HARDEST">Sehr Schwer</string>
+    <string name="turn_of">Zug von</string>
 </resources>
