refactored old difficulties. Added new one

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,6 @@
     <string name="nothing_to_kill">Nothing to kill here. Choose a piece from your opponent!</string>
     <string name="cannot_kill_mill">You can not kill a mill. Choose another target!</string>
     <string name="turn_of">Turn of</string>
+    <string name="EASIEST">Easiest</string>
 
 </resources>
