--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -44,4 +44,5 @@
     <string name="HARDER">Schwerer</string>
     <string name="HARDEST">Sehr Schwer</string>
     <string name="turn_of">Zug von</string>
+    <string name="EASIEST">Sehr Einfach</string>
 </resources>
