--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,8 +37,8 @@
     <string name="HARDEST">Hardest</string>
     <string name="you_have_won">You have won!</string>
     <string name="has_won">has won!</string>
-    <string name="no_moves_bot">His opponent can not make any further move!</string>
-    <string name="no_pieces_bot">His opponent has only two pieces left!</string>
+    <string name="won_no_moves_bot">His opponent can not make any further move!</string>
+    <string name="won_no_pieces_bot">His opponent only has two pieces left!</string>
     <string name="show_gameboard">Show Gameboard</string>
     <string name="pos_occupied">This Position is occupied!</string>
     <string name="nothing_to_move">Nothing to move here. Click on one of your pieces!</string>
@@ -47,7 +47,7 @@
     <string name="nothing_to_kill">Nothing to kill here. Choose a piece from your opponent!</string>
     <string name="cannot_kill_mill">You can not kill a mill. Choose another target!</string>
     <string name="turn_of">Turn of</string>
-    <string name="no_moves_human">You can not make any further move!</string>
-    <string name="no_pieces_human">You only have two pieces left!</string>
+    <string name="won_no_moves_human">Your opponent can not make any further move!</string>
+    <string name="won_no_pieces_human">Your opponent only has two pieces left!</string>
     <string name="EASIEST">Easiest</string>
 </resources>
