added more specific game over messages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,7 @@
     <string name="won_no_moves_human">Your opponent can not make any further move!</string>
     <string name="won_no_pieces_human">Your opponent only has two pieces left!</string>
     <string name="EASIEST">Easiest</string>
+    <string name="you_have_lost">You have lost!</string>
+    <string name="lost_no_moves">You can not make any further move!</string>
+    <string name="lost_no_pieces">You only have two pieces left!</string>
 </resources>
