--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -33,6 +33,8 @@
     <string name="won_no_moves_human">Dein Gegner kann keinen Zug mehr machen!</string>
     <string name="won_no_pieces_bot">Sein Gegner hat nur noch zwei Steine!</string>
     <string name="won_no_pieces_human">Dein Gegner hat nur noch zwei Steine!</string>
+    <string name="lost_no_moves">Du kannst keinen Zug mehr machen!</string>
+    <string name="lost_no_pieces">Du hast nur noch zwei Steine!</string>
     <string name="show_gameboard">Spielfeld anzeigen</string>
     <string name="pos_occupied">Die Position ist besetzt!</string>
     <string name="nothing_to_move">Hier gibt es nichts zum Bewegen. Klicke auf einen von deinen Steinen!</string>
@@ -47,4 +49,5 @@
     <string name="HARDEST">Sehr Schwer</string>
     <string name="turn_of">Zug von</string>
     <string name="EASIEST">Sehr Einfach</string>
+    <string name="you_have_lost">Du hast verloren!</string>
 </resources>
